<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_empty"/>

        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_without_text" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/logo_text"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <LinearLayout
                    android:layout_width="440dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:id="@+id/main_form">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_height="40dp"
                        android:text="@string/enter_account"
                        android:onClick="toFormClicked"
                        android:id="@+id/enterButton"
                        android:textColor="#fff"
                        android:background="@drawable/green_button"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="40dp"
                        android:text="@string/register_account"
                        android:onClick="toFormClicked"
                        android:id="@+id/registerButton"
                        android:textColor="#fff"
                        android:background="@drawable/green_button"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    android:id="@+id/form">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nickname"
                        android:id="@+id/nicknameField"
                        android:lines="1"
                        android:inputType="text"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:id="@+id/passwordField"
                        android:lines="1"
                        android:inputType="textPassword"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/errorLabel"
                        android:textColor="#dd0000"
                        android:visibility="gone"
                        android:maxLines="1"
                        android:layout_marginBottom="5dp"
                        android:textAlignment="viewStart"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff"
                            android:id="@+id/applyFormButton"
                            android:onClick="onFormApplied"
                            android:background="@drawable/green_button"
                            android:layout_marginEnd="10dp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            android:textColor="#fff"
                            android:id="@+id/cancelFormButton"
                            android:onClick="onFormCanceled"
                            android:background="@drawable/green_button"
                            android:layout_marginStart="10dp"/>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>