<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/painter_male"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:id="@+id/nickname"/>

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/exit"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/green_button"
                    android:text="@string/searchGame"
                    android:id="@+id/searchGameButton"
                    android:gravity="center"
                    android:onClick="onSearchGameButtonClick"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/loadingLayout"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <ProgressBar
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginBottom="5dp"
                            android:indeterminate="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000"
                            android:textSize="14sp"
                            android:text="@string/searchingGame"/>

                    </LinearLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/cancel"
                        android:textSize="14sp"
                        android:onClick="onCancelSearchGameButtonClick"
                        android:background="@drawable/green_button"/>

                </LinearLayout>

            </FrameLayout>

        </FrameLayout>

    </LinearLayout>

    <ListView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_gravity="end"
        android:id="@+id/waitingPlayersList"
        android:listSelector="@android:color/transparent"
        android:background="@drawable/gradient_background"/>

</FrameLayout>